# mistral-worldwide-hacks-2k26

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.prod.yml
mistralski/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  openapi.yaml  pyproject.toml
mistralski/config/: agents.yaml  countries.yaml  game.yaml
mistralski/scripts/: extract_pois.py  generate_gm_dataset.py  play_gm.py  play_web.py  setup_osrm.sh  test_connections.py  test_gm_full_cycle.py
mistralski/scripts/gm_dataset/: __init__.py  constants.py  generator.py  prompts.py  scenarios.py  schemas.py  seed_headlines.py  validator.py
mistralski/src/agents/: game_master_agent.py
mistralski/src/agents/game_master/.agents/: AGENT.md  HEARTBEAT.md  SOUL.md
mistralski/src/clients/: __init__.py  duckdb_store.py  news.py  osrm.py  qdrant.py  vllm.py  weather.py
mistralski/src/core/: __init__.py  config.py  exceptions.py  logging.py
mistralski/src/db/: schema.py
mistralski/src/game_master/: README.md
mistralski/src/game_master/prompts/: agent_analysis.md  event_proposal.md  news_generation.md  system.md  turn_bilan.md
mistralski/src/game_master/soul/: rules.md  soul.md
mistralski/src/game_master/state/: history.md  player_profile.md  world_state.md
mistralski/src/game_master/state/agent_dossiers/: agent_01.md  agent_02.md  agent_03.md  agent_04.md  (+6 more)
mistralski/src/models/: __init__.py  agent.py  game.py  world.py
mistralski/tests/: test_duckdb_store.py  test_osrm_client.py  test_qdrant_client.py  test_vllm_client.py
(+310 files in other folders)
